Auto release, better i18n and a classical kitty icon

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,16 +1,16 @@
-# Block
-block.cyber-io-ic-machine.name=\u96C6\u6210\u7535\u8DEF\u673A
-block.cyber-io-ic-machine.description=\u53EF\u4EE5\u5236\u9020\u82AF\u7247\u7684\u673A\u5668
-block.cyber-io-receiver.name=\u63A5\u6536\u8005
+# \u65B9\u5757
+block.cyber-io-ic-machine.name=\u96C6\u6210\u7535\u8DEF\u5DE5\u5382
+block.cyber-io-ic-machine.description=\u53EF\u4EE5\u5236\u9020\u96C6\u6210\u7535\u8DEF\u7684\u5DE5\u5382\u3002
+block.cyber-io-receiver.name=\u63A5\u6536\u5668
 block.cyber-io-receiver.description=\u63A5\u6536\u6570\u636E\u3002
-block.cyber-io-sender.name=\u53D1\u4EF6\u4EBA
+block.cyber-io-sender.name=\u53D1\u9001\u5668
 block.cyber-io-sender.description=\u53D1\u9001\u6570\u636E\u3002
 block.cyber-io-virus.name=\u75C5\u6BD2
 block.cyber-io-virus.description=\u65E0\u9650\u4F20\u64AD\u7684\u75C5\u6BD2\u3002
 block.cyber-io-land-projector.name=\u9646\u5730\u6295\u5F71\u4EEA
-block.cyber-io-land-projector.description=\u6295\u5C04\u652F\u6301\u60A8\u5728\u5176\u4E0A\u6784\u5EFA\u5757\u7684\u5168\u606F\u571F\u5730\u3002
-block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u677F
-block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u677F\u3002
-# Item
+block.cyber-io-land-projector.description=\u6295\u5C04\u51FA\u5168\u606F\u5730\u9762\uFF0C\u4EE5\u652F\u6301\u60A8\u5728\u4E4B\u4E0A\u8FDB\u884C\u5EFA\u9020\u3002
+block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u9762
+block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u9762\u3002
+# \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
-item.cyber-io-ic.description=\u4E00\u4E2A\u82AF\u7247\u3002
+item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
