Underdrive and uninfected blocks registry

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -11,6 +11,12 @@ block.cyber-io-land-projector.name=\u9646\u5730\u6295\u5F71\u4EEA
 block.cyber-io-land-projector.description=\u6295\u5C04\u51FA\u5168\u606F\u5730\u9762\uFF0C\u4EE5\u652F\u6301\u60A8\u5728\u4E4B\u4E0A\u8FDB\u884C\u5EFA\u9020\u3002
 block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u9762
 block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u9762\u3002
+block.cyber-io-anti-virus.name=\u6740\u6BD2\u8F6F\u4EF6
+block.cyber-io-anti-virus.description=\u4E00\u4E2A\u6740\u6BD2\u8F6F\u4EF6
+block.cyber-io-underdrive-projector.name=\u51CF\u901F\u6295\u5F71\u5668
+block.cyber-io-underdrive-projector.description=\u51CF\u6162\u5468\u56F4\u7684\u673A\u5668\u7684\u901F\u5EA6\u3002
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
+#Bars
+bar.cyber-io.generation={0} \u4EE3
