--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -11,6 +11,12 @@ block.cyber-io-land-projector.name=\u9678\u5730\u6295\u5F71\u6A5F
 block.cyber-io-land-projector.description=\u6295\u5F71\u51FA\u53EF\u4F9B\u4F60\u9032\u884C\u5EFA\u9020\u7684\u5168\u606F\u5730\u9762\u3002
 block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u9762
 block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u9762\u3002
+block.cyber-io-anti-virus.name=\u6BBA\u6BD2\u8EDF\u9AD4
+block.cyber-io-anti-virus.description=\u4E00\u500B\u6BBA\u6BD2\u8EDF\u9AD4\u3002
+block.cyber-io-underdrive-projector.name=\u7DE9\u901F\u904B\u8F49\u6295\u5F71\u5668
+block.cyber-io-underdrive-projector.description=\u6E1B\u7DE9\u5468\u570D\u6A5F\u5668\u7684\u904B\u8F49\u901F\u5EA6
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
+#Bars
+bar.cyber-io.generation={0} \u4EE3
