--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -20,3 +20,5 @@ item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
 #Bars
 bar.cyber-io.generation={0} \u4EE3
+bar.cyber-io.slow-down=\u901F\u5EA6\uFF1A-{0}%
+bar.cyber-io.efficiency-absorption=\u6548\u7387\u6C72\u53D6\uFF1A{0}%
