--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -20,3 +20,5 @@ item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
 #Bars
 bar.cyber-io.generation={0} \u4EE3
+bar.cyber-io.slow-down=\u904B\u8F49\u901F\u5EA6\uFF1A-{0}%
+bar.cyber-io.efficiency-absorption=\u6548\u7387\u5438\u6536\uFF1A{0}%
