--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -22,3 +22,5 @@ item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
 bar.cyber-io.generation={0} \u4EE3
 bar.cyber-io.slow-down=\u901F\u5EA6\uFF1A-{0}%
 bar.cyber-io.efficiency-absorption=\u6548\u7387\u6C72\u53D6\uFF1A{0}%
+bar.cyber-io.team=\u961F\u4F0D\uFF1A{0}
+bar.cyber-io.spiral-rotate-speed=\u8F6C\u901F\uFF1A{0}
