--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -15,6 +15,8 @@ block.cyber-io-anti-virus.name=\u6740\u6BD2\u8F6F\u4EF6
 block.cyber-io-anti-virus.description=\u4E00\u4E2A\u6740\u6BD2\u8F6F\u4EF6
 block.cyber-io-underdrive-projector.name=\u51CF\u901F\u6295\u5F71\u5668
 block.cyber-io-underdrive-projector.description=\u51CF\u6162\u5468\u56F4\u7684\u673A\u5668\u7684\u901F\u5EA6\u3002
+block.cyber-io-hyper-overdrive-sphere.name=\u5149\u901F\u8D85\u8F7D\u534A\u7403
+block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
@@ -24,3 +26,5 @@ bar.cyber-io.slow-down=\u901F\u5EA6\uFF1A-{0}%
 bar.cyber-io.efficiency-absorption=\u6548\u7387\u6C72\u53D6\uFF1A{0}%
 bar.cyber-io.team=\u961F\u4F0D\uFF1A{0}
 bar.cyber-io.spiral-rotate-speed=\u8F6C\u901F\uFF1A{0}
+bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
+bar.cyber-io.range=\u8303\u56F4: {0}
