--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -15,6 +15,8 @@ block.cyber-io-anti-virus.name=\u6BBA\u6BD2\u8EDF\u9AD4
 block.cyber-io-anti-virus.description=\u4E00\u500B\u6BBA\u6BD2\u8EDF\u9AD4\u3002
 block.cyber-io-underdrive-projector.name=\u7DE9\u901F\u904B\u8F49\u6295\u5F71\u5668
 block.cyber-io-underdrive-projector.description=\u6E1B\u7DE9\u5468\u570D\u6A5F\u5668\u7684\u904B\u8F49\u901F\u5EA6
+block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
+block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
@@ -24,3 +26,5 @@ bar.cyber-io.slow-down=\u904B\u8F49\u901F\u5EA6\uFF1A-{0}%
 bar.cyber-io.efficiency-absorption=\u6548\u7387\u5438\u6536\uFF1A{0}%
 bar.cyber-io.team=\u968A\u4F0D\uFF1A{0}
 bar.cyber-io.spiral-rotate-speed=\u65CB\u8F49\u901F\u5EA6\uFF1A{0}
+bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
+bar.cyber-io.range=\u7BC4\u570D: {0}
