--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -28,4 +28,4 @@ bar.cyber-io.team=\u961F\u4F0D\uFF1A{0}
 bar.cyber-io.spiral-rotate-speed=\u8F6C\u901F\uFF1A{0}
 bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u8303\u56F4: {0}\u65B9\u5757
-bar.cyber-io.cool-down=Cool Down: {0}s
+bar.cyber-io.cool-down=\u51B7\u5374: {0}\u79D2
