--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -28,4 +28,4 @@ bar.cyber-io.team=\u968A\u4F0D\uFF1A{0}
 bar.cyber-io.spiral-rotate-speed=\u65CB\u8F49\u901F\u5EA6\uFF1A{0}
 bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u7BC4\u570D: {0}\u65B9\u584A
-bar.cyber-io.cool-down=Cool Down: {0}s
+bar.cyber-io.cool-down=\u51B7\u537B: {0}\u79D2
