--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -30,3 +30,6 @@ bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u8303\u56F4\uFF1A{0}\u65B9\u5757
 bar.cyber-io.cool-down=\u51B7\u5374\uFF1A{0}\u79D2
 bar.cyber-io.is-alive=Is Alive: {0}
+bar.cyber-io.is-projecting=Is Projecting: {0}
+bar.cyber-io.rest-restore=Rest Restore: {0}
+bar.cyber-io.charge=Charge: {0}
