--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -30,3 +30,6 @@ bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u7BC4\u570D\uFF1A{0}\u65B9\u584A
 bar.cyber-io.cool-down=\u51B7\u537B\uFF1A{0}\u79D2
 bar.cyber-io.is-alive=Is Alive: {0}
+bar.cyber-io.is-projecting=Is Projecting: {0}
+bar.cyber-io.rest-restore=Rest Restore: {0}
+bar.cyber-io.charge=Charge: {0}
