--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -33,7 +33,7 @@ bar.cyber-io.spiral-rotate-speed=\u8F6C\u901F\uFF1A{0}
 bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u8303\u56F4\uFF1A{0}\u65B9\u5757
 bar.cyber-io.cool-down=\u51B7\u5374\uFF1A{0}\u79D2
-bar.cyber-io.is-alive=Is Alive: {0}
-bar.cyber-io.is-projecting=Is Projecting: {0}
-bar.cyber-io.rest-restore=Rest Restore: {0}
-bar.cyber-io.charge=Charge: {0}
+bar.cyber-io.is-alive=\u5B58\u6D3B: {0}
+bar.cyber-io.is-projecting=\u6295\u5F71\u4E2D: {0}
+bar.cyber-io.rest-restore=\u6062\u590D: {0}
+bar.cyber-io.charge=\u5145\u80FD: {0}
