--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -11,14 +11,16 @@ block.cyber-io-land-projector.name=\u9678\u5730\u6295\u5F71\u6A5F
 block.cyber-io-land-projector.description=\u6295\u5F71\u51FA\u53EF\u4F9B\u4F60\u9032\u884C\u5EFA\u9020\u7684\u5168\u606F\u5730\u9762\u3002
 block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u9762
 block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u9762\u3002
-block.cyber-io-holo-wall.name=Holo Wall
-block.cyber-io-holo-wall.description=Holographic wall. It will restore itself automatically powered by LiplumCloud Inc.
+block.cyber-io-holo-wall.name=
+block.cyber-io-holo-wall.description=
+block.cyber-io-holo-wall-large.name=
+block.cyber-io-holo-wall-large.description=
 block.cyber-io-anti-virus.name=\u6BBA\u6BD2\u8EDF\u9AD4
 block.cyber-io-anti-virus.description=\u4E00\u500B\u6BBA\u6BD2\u8EDF\u9AD4\u3002
 block.cyber-io-underdrive-projector.name=\u7DE9\u901F\u904B\u8F49\u6295\u5F71\u5668
 block.cyber-io-underdrive-projector.description=\u6E1B\u7DE9\u5468\u570D\u6A5F\u5668\u7684\u904B\u8F49\u901F\u5EA6
-block.cyber-io-cloud.name=Cloud
-block.cyber-io-cloud.description=Stores your data, powered by LiplumCloud Inc. You can access them where they are!
+block.cyber-io-cloud.name=
+block.cyber-io-cloud.description=
 block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 # \u7269\u54C1
@@ -33,7 +35,8 @@ bar.cyber-io.spiral-rotate-speed=\u65CB\u8F49\u901F\u5EA6\uFF1A{0}
 bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u7BC4\u570D\uFF1A{0}\u65B9\u584A
 bar.cyber-io.cool-down=\u51B7\u537B\uFF1A{0}\u79D2
-bar.cyber-io.is-alive=Is Alive: {0}
-bar.cyber-io.is-projecting=Is Projecting: {0}
-bar.cyber-io.rest-restore=Rest Restore: {0}
-bar.cyber-io.charge=Charge: {0}
+bar.cyber-io.is-alive=
+bar.cyber-io.is-projecting=
+bar.cyber-io.rest-restore=
+bar.cyber-io.charge=
+bar.cyber-io.is-asleep=
