--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -11,16 +11,16 @@ block.cyber-io-land-projector.name=\u9646\u5730\u6295\u5F71\u4EEA
 block.cyber-io-land-projector.description=\u6295\u5C04\u51FA\u5168\u606F\u5730\u9762\uFF0C\u4EE5\u652F\u6301\u60A8\u5728\u4E4B\u4E0A\u8FDB\u884C\u5EFA\u9020\u3002
 block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u9762
 block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u9762\u3002
-block.cyber-io-holo-wall.name=
-block.cyber-io-holo-wall.description=
-block.cyber-io-holo-wall-large.name=
-block.cyber-io-holo-wall-large.description=
+block.cyber-io-holo-wall.name=\u5168\u606F\u5899   
+block.cyber-io-holo-wall.description=\u5438\u6536\u653B\u51FB\uFF0C\u5728\u53D7\u5230\u4E00\u4E9B\u4F24\u5BB3\u540E\u8FDB\u5165\u4F11\u7720\u72B6\u6001\uFF0C\u7F13\u6162\u6062\u590D\u8840\u91CF
+block.cyber-io-holo-wall-large.name=\u5927\u578B\u5168\u606F\u5899
+block.cyber-io-holo-wall-large.description=\u5438\u6536\u4F24\u5BB3\uFF0C\u5728\u53D7\u5230\u5927\u91CF\u4F24\u5BB3\u540E\u8FDB\u5165\u4F11\u7720\u72B6\u6001\uFF0C\u7F13\u6162\u6062\u590D\u8840\u91CF
 block.cyber-io-anti-virus.name=\u6740\u6BD2\u8F6F\u4EF6
 block.cyber-io-anti-virus.description=\u4E00\u4E2A\u6740\u6BD2\u8F6F\u4EF6
 block.cyber-io-underdrive-projector.name=\u51CF\u901F\u6295\u5F71\u5668
 block.cyber-io-underdrive-projector.description=\u51CF\u6162\u5468\u56F4\u7684\u673A\u5668\u7684\u901F\u5EA6\u3002
-block.cyber-io-cloud.name=
-block.cyber-io-cloud.description=
+block.cyber-io-cloud.name=\u4E91\u7AEF\u5B58\u50A8\u5668
+block.cyber-io-cloud.description=\u63A5\u53D7/\u8F93\u51FA/\u50A8\u5B58\u7EBF\u4E0A\u7269\u54C1
 block.cyber-io-hyper-overdrive-sphere.name=\u5149\u901F\u8D85\u8F7D\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 # \u7269\u54C1
@@ -35,8 +35,8 @@ bar.cyber-io.spiral-rotate-speed=\u8F6C\u901F\uFF1A{0}
 bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u8303\u56F4\uFF1A{0}\u65B9\u5757
 bar.cyber-io.cool-down=\u51B7\u5374\uFF1A{0}\u79D2
-bar.cyber-io.is-alive=Is Alive: {0}
-bar.cyber-io.is-projecting=
-bar.cyber-io.rest-restore=
-bar.cyber-io.charge=
-bar.cyber-io.is-asleep=
+bar.cyber-io.is-alive=\u5B58\u6D3B\u4E2D: {0}
+bar.cyber-io.is-projecting=\u6295\u5F71\u4E2D
+bar.cyber-io.rest-restore=\u4F11\u606F\u6062\u590D
+bar.cyber-io.charge=\u5145\u80FD
+bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D
