--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -11,16 +11,16 @@ block.cyber-io-land-projector.name=\u9678\u5730\u6295\u5F71\u6A5F
 block.cyber-io-land-projector.description=\u6295\u5F71\u51FA\u53EF\u4F9B\u4F60\u9032\u884C\u5EFA\u9020\u7684\u5168\u606F\u5730\u9762\u3002
 block.cyber-io-holo-floor.name=\u5168\u606F\u5730\u9762
 block.cyber-io-holo-floor.description=\u5168\u606F\u5730\u9762\u3002
-block.cyber-io-holo-wall.name=
-block.cyber-io-holo-wall.description=
-block.cyber-io-holo-wall-large.name=
-block.cyber-io-holo-wall-large.description=
+block.cyber-io-holo-wall.name=\u5168\u606F\u58BB\u58C1
+block.cyber-io-holo-wall.description=\u5438\u6536\u653B\u64CA\uFF0C\u53D7\u5230\u4E9B\u8A31\u50B7\u5BB3\u540E\u9032\u5165\u4F11\u7720\u72C0\u614B\uFF0C\u7DE9\u6162\u6062\u5FA9\u8840\u91CF
+block.cyber-io-holo-wall-large.name=\u5927\u578B\u5168\u606F\u58BB\u58C1
+block.cyber-io-holo-wall-large.description=\u5438\u6536\u653B\u64CA\uFF0C\u53D7\u5230\u5927\u91CF\u4E0A\u50B7\u5BB3\u540E\u9032\u5165\u4F11\u7720\u72C0\u614B\uFF0C\u7DE9\u6162\u6062\u5FA9\u8840\u91CF
 block.cyber-io-anti-virus.name=\u6BBA\u6BD2\u8EDF\u9AD4
 block.cyber-io-anti-virus.description=\u4E00\u500B\u6BBA\u6BD2\u8EDF\u9AD4\u3002
 block.cyber-io-underdrive-projector.name=\u7DE9\u901F\u904B\u8F49\u6295\u5F71\u5668
 block.cyber-io-underdrive-projector.description=\u6E1B\u7DE9\u5468\u570D\u6A5F\u5668\u7684\u904B\u8F49\u901F\u5EA6
-block.cyber-io-cloud.name=
-block.cyber-io-cloud.description=
+block.cyber-io-cloud.name=\u96F2\u7AEF\u5009\u5EAB
+block.cyber-io-cloud.description=\u63A5\u53D7/\u8F38\u51FA/\u5132\u5B58\u7DDA\u4E0A\u7269\u54C1
 block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 # \u7269\u54C1
@@ -35,8 +35,8 @@ bar.cyber-io.spiral-rotate-speed=\u65CB\u8F49\u901F\u5EA6\uFF1A{0}
 bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u7BC4\u570D\uFF1A{0}\u65B9\u584A
 bar.cyber-io.cool-down=\u51B7\u537B\uFF1A{0}\u79D2
-bar.cyber-io.is-alive=
-bar.cyber-io.is-projecting=
-bar.cyber-io.rest-restore=
-bar.cyber-io.charge=
-bar.cyber-io.is-asleep=
+bar.cyber-io.is-alive=\u5B58\u6D3B\u8457
+bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u8457
+bar.cyber-io.rest-restore=\u6062\u5FA9\u8840\u69FD
+bar.cyber-io.charge=\u5145\u96FB
+bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720
