--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -23,6 +23,8 @@ block.cyber-io-cloud.name=\u96F2\u7AEF\u5009\u5EAB
 block.cyber-io-cloud.description=\u63A5\u53D7/\u8F38\u51FA/\u5132\u5B58\u7DDA\u4E0A\u7269\u54C1
 block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
+block.cyber-io-deleter.name=
+block.cyber-io-deleter.description=
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
@@ -40,3 +42,4 @@ bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u8457
 bar.cyber-io.rest-restore=\u6062\u5FA9\u8840\u69FD
 bar.cyber-io.charge=\u5145\u96FB
 bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720
+bar.cyber-io.last-damage=
