--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -23,8 +23,8 @@ block.cyber-io-cloud.name=\u96F2\u7AEF\u5009\u5EAB
 block.cyber-io-cloud.description=\u63A5\u53D7/\u8F38\u51FA/\u5132\u5B58\u7DDA\u4E0A\u7269\u54C1
 block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
-block.cyber-io-deleter.name=
-block.cyber-io-deleter.description=
+block.cyber-io-deleter.name=\u6839\u9664\u8005
+block.cyber-io-deleter.description=\u5411\u5916\u8F3B\u5C04\u51FA\u96E2\u5B50\u5149\u6CE2\uFF0C\u9020\u6210\u7BC4\u570D\u7A7F\u900F\u50B7\u5BB3\uFF0C\u8840\u91CF\u4F4E\u7684\u6575\u4EBA\u5C07\u6703\u88AB\u6D88\u6EC5
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
@@ -42,4 +42,4 @@ bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u8457
 bar.cyber-io.rest-restore=\u6062\u5FA9\u8840\u69FD
 bar.cyber-io.charge=\u5145\u96FB
 bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720
-bar.cyber-io.last-damage=
+bar.cyber-io.last-damage=\u6700\u5F8C\u7684\u50B7\u5BB3
