Floating holo-wall

--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -42,4 +42,4 @@ bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u8457
 bar.cyber-io.rest-restore=\u6062\u5FA9\u8840\u69FD
 bar.cyber-io.charge=\u5145\u96FB
 bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720
-bar.cyber-io.last-damage=\u6700\u5F8C\u7684\u50B7\u5BB3
+bar.cyber-io.last-damaged=\u6700\u5F8C\u7684\u50B7\u5BB3
