--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -38,8 +38,8 @@ bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u8303\u56F4\uFF1A{0}\u65B9\u5757
 bar.cyber-io.cool-down=\u51B7\u5374\uFF1A{0}\u79D2
 bar.cyber-io.is-alive=\u5B58\u6D3B: {0}
-bar.cyber-io.is-projecting=\u6295\u5F71\uFF1A{0}
+bar.cyber-io.is-projecting=\u6295\u5F71\u4E2D\uFF1A{0}
 bar.cyber-io.rest-restore=\u5269\u4F59\u6062\u590D\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
-bar.cyber-io.is-asleep=\u4F11\u7720\uFF1A{0}
+bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u540E\u4F24\u5BB3\u65F6\u95F4\uFF1A{0}\u79D2
