--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -37,9 +37,9 @@ bar.cyber-io.spiral-rotate-speed=\u65CB\u8F49\u901F\u5EA6\uFF1A{0}
 bar.cyber-io.alpha=\u900F\u660E\u5EA6\uFF1A{0}
 bar.cyber-io.range=\u7BC4\u570D\uFF1A{0}\u65B9\u584A
 bar.cyber-io.cool-down=\u51B7\u537B\uFF1A{0}\u79D2
-bar.cyber-io.is-alive=\u5B58\u6D3B\u8457
-bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u8457
-bar.cyber-io.rest-restore=\u6062\u5FA9\u8840\u69FD
-bar.cyber-io.charge=\u5145\u96FB
-bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720
-bar.cyber-io.last-damaged=\u6700\u5F8C\u7684\u50B7\u5BB3
+bar.cyber-io.is-alive=\u5B58\u6D3B\u8457\uFF1A{0}
+bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u4E2D\uFF1A{0}
+bar.cyber-io.rest-restore=\u6062\u5FA9\u503C\u8840\u69FD\uFF1A{0}
+bar.cyber-io.charge=\u5145\u80FD\uFF1A{}
+bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720\uFF1A{0}
+bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
