--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -25,6 +25,10 @@ block.cyber-io-hyper-overdrive-sphere.name=\u5149\u901F\u8D85\u8F7D\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 block.cyber-io-deleter.name=\u94F2\u9664\u8005
 block.cyber-io-deleter.description=\u5411\u5916\u8F90\u5C04\u53D1\u51FA\u5168\u606F\u5149\u6CE2\uFF0C\u9020\u6210\u7A7F\u900F\u8303\u56F4\u4F24\u5BB3\uFF0C\u6D88\u706D\u8840\u91CF\u4F4E\u7684\u5355\u4F4D
+block.cyber-io-TMTRAINER.name=TMTRAINER
+block.cyber-io-TMTRAINER.description=TMTRAINER
+block.cyber-io-prism.name=Prism
+block.cyber-io-prism.description=PRISM can copy your bullet because it is for your security.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
@@ -43,3 +47,12 @@ bar.cyber-io.rest-restore=\u5269\u4F59\u6062\u590D\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u540E\u4F24\u5BB3\u65F6\u95F4\uFF1A{0}\u79D2
+#Controls
+control.cyber-io.yes=Yes
+control.cyber-io.no=No
+control.cyber-io.ok=OK
+#StatusEffects
+status.cyber-io-infected.name=Infected
+status.cyber-io-infected.description=The infected will hurt based on their current HP.
+status.cyber-io-vulnerable.name=Vulnerable
+status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
