--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -44,7 +44,7 @@ bar.cyber-io.cool-down=\u51B7\u537B\uFF1A{0}\u79D2
 bar.cyber-io.is-alive=\u5B58\u6D3B\u8457\uFF1A{0}
 bar.cyber-io.is-projecting=\u6B63\u5728\u6295\u5F71\u4E2D\uFF1A{0}
 bar.cyber-io.rest-restore=\u6062\u5FA9\u503C\u8840\u69FD\uFF1A{0}
-bar.cyber-io.charge=\u5145\u80FD\uFF1A{}
+bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
 #Controls
