--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -25,10 +25,10 @@ block.cyber-io-hyper-overdrive-sphere.name=\u5149\u901F\u8D85\u8F7D\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 block.cyber-io-deleter.name=\u94F2\u9664\u8005
 block.cyber-io-deleter.description=\u5411\u5916\u8F90\u5C04\u53D1\u51FA\u5168\u606F\u5149\u6CE2\uFF0C\u9020\u6210\u7A7F\u900F\u8303\u56F4\u4F24\u5BB3\uFF0C\u6D88\u706D\u8840\u91CF\u4F4E\u7684\u5355\u4F4D
-block.cyber-io-TMTRAINER.name=TMTRAINER
-block.cyber-io-TMTRAINER.description=TMTRAINER
-block.cyber-io-prism.name=Prism
-block.cyber-io-prism.description=PRISM can copy your bullet because it is for your security.
+block.cyber-io-TMTRAINER.name=TM\u8BAD\u7EC3\u5BB6
+block.cyber-io-TMTRAINER.description=TM\u8BAD\u7EC3\u5BB6
+block.cyber-io-prism.name=\u68F1\u955C
+block.cyber-io-prism.description=\u68F1\u955C\u53EF\u4EE5\u590D\u5236\u4F60\u7684\u5B50\u5F39\uFF0C\u56E0\u4E3A\u4ED6\u662F\u4E3A\u4E86\u60A8\u7684\u5B89\u5168.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
@@ -48,11 +48,11 @@ bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u540E\u4F24\u5BB3\u65F6\u95F4\uFF1A{0}\u79D2
 #Controls
-control.cyber-io.yes=Yes
-control.cyber-io.no=No
-control.cyber-io.ok=OK
+control.cyber-io.yes=\u662F
+control.cyber-io.no=\u5426
+control.cyber-io.ok=\u597D
 #StatusEffects
-status.cyber-io-infected.name=Infected
-status.cyber-io-infected.description=The infected will hurt based on their current HP.
-status.cyber-io-vulnerable.name=Vulnerable
-status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
+status.cyber-io-infected.name=\u611F\u67D3
+status.cyber-io-infected.description=\u76EE\u6807\u4F1A\u6839\u636E\u8840\u91CF\u6765\u53D7\u5230\u4F24\u5BB3\u3002
+status.cyber-io-vulnerable.name=\u6613\u4F24
+status.cyber-io-vulnerable.description=\u5F53\u5FC3\uFF0C\u4ED6\u4EEC\u968F\u65F6\u90FD\u4F1A\u6B7B\uFF01
