--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -25,10 +25,10 @@ block.cyber-io-hyper-overdrive-sphere.name=\u8D85\u5149\u901F\u534A\u7403
 block.cyber-io-hyper-overdrive-sphere.description=\u8D85\u5149\u901F\uFF01\uFF01\uFF01
 block.cyber-io-deleter.name=\u6839\u9664\u8005
 block.cyber-io-deleter.description=\u5411\u5916\u8F3B\u5C04\u51FA\u96E2\u5B50\u5149\u6CE2\uFF0C\u9020\u6210\u7BC4\u570D\u7A7F\u900F\u50B7\u5BB3\uFF0C\u8840\u91CF\u4F4E\u7684\u6575\u4EBA\u5C07\u6703\u88AB\u6D88\u6EC5
-block.cyber-io-TMTRAINER.name=TMTRAINER
-block.cyber-io-TMTRAINER.description=TMTRAINER
-block.cyber-io-prism.name=Prism
-block.cyber-io-prism.description=PRISM can copy your bullet because it is for your security.
+block.cyber-io-TMTRAINER.name=TM\u57F9\u8A13\u5BB6
+block.cyber-io-TMTRAINER.description=TM\u57F9\u8A13\u5BB6
+block.cyber-io-prism.name=\u68F1\u93E1
+block.cyber-io-prism.description=\u68F1\u93E1\u5C07\u8907\u88FD\u60A8\u7684\u5B50\u5F48\uFF0C\u56E0\u70BA\u4ED6\u8981\u4FDD\u8B77\u60A8\u7684\u5B89\u5168.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
@@ -48,11 +48,11 @@ bar.cyber-io.charge=\u5145\u80FD\uFF1A{}
 bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
 #Controls
-control.cyber-io.yes=Yes
-control.cyber-io.no=No
+control.cyber-io.yes=\u662F
+control.cyber-io.no=\u5426
 control.cyber-io.ok=OK
 #StatusEffects
-status.cyber-io-infected.name=Infected
-status.cyber-io-infected.description=The infected will hurt based on their current HP.
-status.cyber-io-vulnerable.name=Vulnerable
-status.cyber-io-vulnerable.description=WATCH OUT! They will be dead at any time!
+status.cyber-io-infected.name=\u611F\u67D3
+status.cyber-io-infected.description=\u76EE\u6A19\u6703\u6839\u64DA\u6700\u5927\u751F\u547D\u503C\u4F86\u53D7\u5230\u50B7\u5BB3.
+status.cyber-io-vulnerable.name=\u5BB9\u6613\u53D7\u50B7\u7684
+status.cyber-io-vulnerable.description=\u7576\u5FC3\u9EDE!\u4ED6\u5011\u96A8\u6642\u90FD\u6B7B\u6389\u7684\uFF01
