--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -47,6 +47,7 @@ bar.cyber-io.rest-restore=\u5269\u4F59\u6062\u590D\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u540E\u4F24\u5BB3\u65F6\u95F4\uFF1A{0}\u79D2
+bar.cyber-io.progress=Progress: {0}%
 #Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
