Tinted liquid bullets!

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -48,6 +48,10 @@ bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u540E\u4F24\u5BB3\u65F6\u95F4\uFF1A{0}\u79D2
 bar.cyber-io.progress=Progress: {0}%
+bar.cyber-io.prism=Prism
+bar.cyber-io.prism.pl=Prisms
+bar.cyber-io.linked=Linked
+bar.cyber-io.linked.no=No Link
 #Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
