--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -48,6 +48,10 @@ bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
 bar.cyber-io.progress=Progress: {0}%
+bar.cyber-io.prism=Prism
+bar.cyber-io.prism.pl=Prisms
+bar.cyber-io.linked=Linked
+bar.cyber-io.linked.no=No Link
 #Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
