--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,6 +1,8 @@
 # \u65B9\u5757
 block.cyber-io-ic-machine.name=\u96C6\u6210\u7535\u8DEF\u5DE5\u5382
 block.cyber-io-ic-machine.description=\u53EF\u4EE5\u5236\u9020\u96C6\u6210\u7535\u8DEF\u7684\u5DE5\u5382\u3002
+lock.cyber-io-ic-machine-s.name=IC Maker
+block.cyber-io-ic-machine-s.description=A machine which can make chips in a low speed.
 block.cyber-io-receiver.name=\u63A5\u6536\u5668
 block.cyber-io-receiver.description=\u63A5\u6536\u6570\u636E\u3002
 block.cyber-io-sender.name=\u53D1\u9001\u5668
