--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,6 +1,8 @@
 # \u65B9\u584A
 block.cyber-io-ic-machine.name=\u7A4D\u9AD4\u96FB\u8DEF\u6A5F\u5668
 block.cyber-io-ic-machine.description=\u53EF\u4EE5\u88FD\u9020\u7A4D\u9AD4\u96FB\u8DEF\u7684\u6A5F\u5668\u3002
+lock.cyber-io-ic-machine-s.name=IC Maker
+block.cyber-io-ic-machine-s.description=A machine which can make chips in a low speed.
 block.cyber-io-receiver.name=\u63A5\u6536\u5668
 block.cyber-io-receiver.description=\u63A5\u6536\u6578\u64DA\u3002
 block.cyber-io-sender.name=\u767C\u9001\u5668
