--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -33,6 +33,8 @@ block.cyber-io-prism.name=\u68F1\u93E1
 block.cyber-io-prism.description=\u68F1\u93E1\u5C07\u8907\u88FD\u60A8\u7684\u5B50\u5F48\uFF0C\u56E0\u70BA\u4ED6\u8981\u4FDD\u8B77\u60A8\u7684\u5B89\u5168.
 block.cyber-io-prism-obelisk.name=Obelisk
 block.cyber-io-prism-obelisk.description=
+block.cyber-io-smart-distributor.name=Smart Distributor
+block.cyber-io-smart-distributor.description=Smart Distributor
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
