Fix receiver on physical server

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -32,9 +32,11 @@ block.cyber-io-TMTRAINER.description=TM\u8BAD\u7EC3\u5BB6
 block.cyber-io-prism.name=\u68F1\u955C
 block.cyber-io-prism.description=\u68F1\u955C\u53EF\u4EE5\u590D\u5236\u4F60\u7684\u5B50\u5F39\uFF0C\u56E0\u4E3A\u4ED6\u662F\u4E3A\u4E86\u60A8\u7684\u5B89\u5168.
 block.cyber-io-prism-obelisk.name=Obelisk
-block.cyber-io-prism-obelisk.description=
+block.cyber-io-prism-obelisk.description=It's watching you.
 block.cyber-io-smart-distributor.name=Smart Distributor
-block.cyber-io-smart-distributor.description=Smart Distributor
+block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
+block.cyber-io-smart-unloader.name=Smart Unloader
+block.cyber-io-smart-unloader.description=Smart Unloader
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
