--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -62,6 +62,8 @@ bar.cyber-io.linked=Linked
 bar.cyber-io.linked.no=No Link
 bar.cyber-io.receiver=Receiver: {0}
 bar.cyber-io.sender=Sender: {0}
+bar.cyber-io.ani-state-last=Last: {0}
+bar.cyber-io.null=Null
 #Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
