--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -36,7 +36,7 @@ block.cyber-io-prism-obelisk.description=It's watching you.
 block.cyber-io-smart-distributor.name=Smart Distributor
 block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
 block.cyber-io-smart-unloader.name=Smart Unloader
-block.cyber-io-smart-unloader.description=Smart Unloader
+block.cyber-io-smart-unloader.description=Smart Unloader can relieve the heavy pressure of transport and help improve mobility.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
