--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -1,8 +1,8 @@
 # \u65B9\u5757
 block.cyber-io-ic-machine.name=\u96C6\u6210\u7535\u8DEF\u5DE5\u5382
 block.cyber-io-ic-machine.description=\u53EF\u4EE5\u5236\u9020\u96C6\u6210\u7535\u8DEF\u7684\u5DE5\u5382\u3002
-lock.cyber-io-ic-machine-s.name=IC Maker
-block.cyber-io-ic-machine-s.description=A machine which can make chips in a low speed.
+lock.cyber-io-ic-machine-s.name=\u96C6\u6210\u7535\u8DEF\u5236\u4F5C\u5382
+block.cyber-io-ic-machine-s.description=\u5236\u9020\u96C6\u6210\u7535\u8DEF\u7684\u5DE5\u5382\uFF0C\u6548\u7387\u8F83\u6162.
 block.cyber-io-receiver.name=\u63A5\u6536\u5668
 block.cyber-io-receiver.description=\u63A5\u6536\u6570\u636E\u3002
 block.cyber-io-sender.name=\u53D1\u9001\u5668
@@ -33,10 +33,10 @@ block.cyber-io-prism.name=\u68F1\u955C
 block.cyber-io-prism.description=\u68F1\u955C\u53EF\u4EE5\u590D\u5236\u4F60\u7684\u5B50\u5F39\uFF0C\u56E0\u4E3A\u4ED6\u662F\u4E3A\u4E86\u60A8\u7684\u5B89\u5168.
 block.cyber-io-prism-obelisk.name=Obelisk
 block.cyber-io-prism-obelisk.description=It's watching you.
-block.cyber-io-smart-distributor.name=Smart Distributor
-block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
-block.cyber-io-smart-unloader.name=Smart Unloader
-block.cyber-io-smart-unloader.description=Smart Unloader
+block.cyber-io-smart-distributor.name=\u667A\u80FD\u5206\u914D\u5668
+block.cyber-io-smart-distributor.description=\u4E00\u952E\u8FDE\u63A5\uFF0C\u5206\u914D\u60A8\u7684\u7269\u54C1.
+block.cyber-io-smart-unloader.name=\u667A\u80FD\u5378\u8F7D\u5668
+block.cyber-io-smart-unloader.description=\u4ECE\u5468\u56F4\u65B9\u5757\u4E2D\u5378\u8F7D\u51FA\u9700\u8981\u7684\u7269\u54C1\uFF0C\u9001\u81F3\u8FDE\u63A5\u5904
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
@@ -55,14 +55,14 @@ bar.cyber-io.rest-restore=\u5269\u4F59\u6062\u590D\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u540E\u4F24\u5BB3\u65F6\u95F4\uFF1A{0}\u79D2
-bar.cyber-io.progress=Progress: {0}%
-bar.cyber-io.prism=Prism
-bar.cyber-io.prism.pl=Prisms
-bar.cyber-io.linked=Linked
-bar.cyber-io.linked.no=No Link
-bar.cyber-io.receiver=Receiver: {0}
-bar.cyber-io.sender=Sender: {0}
-bar.cyber-io.ani-state-last=Last: {0}
+bar.cyber-io.progress=\u6210\u957F: {0}%
+bar.cyber-io.prism=\u68F1\u955C
+bar.cyber-io.prism.pl=\u5229\u7528\u68F1\u955C\u6563\u5C04\u5B50\u5F39
+bar.cyber-io.linked=\u5728\u94FE\u63A5\u7684
+bar.cyber-io.linked.no=\u672A\u94FE\u63A5
+bar.cyber-io.receiver=\u63A5\u53D7\u7AEF: {0}
+bar.cyber-io.sender=\u53D1\u9001\u7AEF: {0}
+bar.cyber-io.ani-state-last=\u6700\u540E: {0}
 bar.cyber-io.null=Null
 #Controls
 control.cyber-io.yes=\u662F
