--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,8 +1,8 @@
 # \u65B9\u584A
 block.cyber-io-ic-machine.name=\u7A4D\u9AD4\u96FB\u8DEF\u6A5F\u5668
 block.cyber-io-ic-machine.description=\u53EF\u4EE5\u88FD\u9020\u7A4D\u9AD4\u96FB\u8DEF\u7684\u6A5F\u5668\u3002
-lock.cyber-io-ic-machine-s.name=IC Maker
-block.cyber-io-ic-machine-s.description=A machine which can make chips in a low speed.
+lock.cyber-io-ic-machine-s.name=\u7A4D\u9AD4\u96FB\u8DEF\u88FD\u9020\u5EE0
+block.cyber-io-ic-machine-s.description=\u88FD\u4F5C\u7A4D\u9AD4\u96FB\u8DEF\u7684\u5DE5\u5EE0\uFF0C\u6548\u7387\u8F03\u6162.
 block.cyber-io-receiver.name=\u63A5\u6536\u5668
 block.cyber-io-receiver.description=\u63A5\u6536\u6578\u64DA\u3002
 block.cyber-io-sender.name=\u767C\u9001\u5668
@@ -31,12 +31,12 @@ block.cyber-io-TMTRAINER.name=TM\u57F9\u8A13\u5BB6
 block.cyber-io-TMTRAINER.description=TM\u57F9\u8A13\u5BB6
 block.cyber-io-prism.name=\u68F1\u93E1
 block.cyber-io-prism.description=\u68F1\u93E1\u5C07\u8907\u88FD\u60A8\u7684\u5B50\u5F48\uFF0C\u56E0\u70BA\u4ED6\u8981\u4FDD\u8B77\u60A8\u7684\u5B89\u5168.
-block.cyber-io-prism-obelisk.name=Obelisk
-block.cyber-io-prism-obelisk.description=It's watching you.
-block.cyber-io-smart-distributor.name=Smart Distributor
-block.cyber-io-smart-distributor.description=One-Click to connect, it's easy to distribute your software.
-block.cyber-io-smart-unloader.name=Smart Unloader
-block.cyber-io-smart-unloader.description=Smart Unloader
+block.cyber-io-prism-obelisk.name=\u65B9\u5C16\u7891
+block.cyber-io-prism-obelisk.description=\u6B63\u5728\u76EF\u8457\u4F60.
+block.cyber-io-smart-distributor.name=\u667A\u80FD\u914D\u9001\u5668
+block.cyber-io-smart-distributor.description=\u4E00\u9375\u9023\u63A5\uFF0C\u5206\u914D\u60A8\u7684\u7269\u54C1.
+block.cyber-io-smart-unloader.name=\u667A\u80FD\u88DD\u8F09\u5668
+block.cyber-io-smart-unloader.description=\u5F9E\u5468\u570D\u7684\u65B9\u584A\u4E2D\u5378\u8F09\u6240\u9700\u8981\u7684\u65B9\u584A\uFF0C\u9001\u81F3\u9023\u63A5\u9EDE
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
@@ -55,14 +55,14 @@ bar.cyber-io.rest-restore=\u6062\u5FA9\u503C\u8840\u69FD\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u6B63\u5728\u4F11\u7720\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u5F8C\u50B7\u5BB3\u6642\u9593\uFF1A{0}\u79D2
-bar.cyber-io.progress=Progress: {0}%
-bar.cyber-io.prism=Prism
-bar.cyber-io.prism.pl=Prisms
-bar.cyber-io.linked=Linked
-bar.cyber-io.linked.no=No Link
-bar.cyber-io.receiver=Receiver: {0}
-bar.cyber-io.sender=Sender: {0}
-bar.cyber-io.ani-state-last=Last: {0}
+bar.cyber-io.progress=\u6210\u9577: {0}%
+bar.cyber-io.prism=\u68F1\u93E1
+bar.cyber-io.prism.pl=\u4F7F\u7528\u68F1\u93E1\u6563\u5C04\u5B50\u5F48
+bar.cyber-io.linked=\u93C8\u63A5
+bar.cyber-io.linked.no=\u672A\u93C8\u63A5
+bar.cyber-io.receiver=\u63A5\u6536\u7AEF: {0}
+bar.cyber-io.sender=\u767C\u9001\u7AEF: {0}
+bar.cyber-io.ani-state-last=\u6700\u5F8C: {0}
 bar.cyber-io.null=Null
 #Controls
 control.cyber-io.yes=\u662F
