Stream host&client

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -37,6 +37,10 @@ block.cyber-io-smart-distributor.name=\u667A\u80FD\u5206\u914D\u5668
 block.cyber-io-smart-distributor.description=\u4E00\u952E\u8FDE\u63A5\uFF0C\u5206\u914D\u60A8\u7684\u7269\u54C1.
 block.cyber-io-smart-unloader.name=\u667A\u80FD\u5378\u8F7D\u5668
 block.cyber-io-smart-unloader.description=\u4ECE\u5468\u56F4\u65B9\u5757\u4E2D\u5378\u8F7D\u51FA\u9700\u8981\u7684\u7269\u54C1\uFF0C\u9001\u81F3\u8FDE\u63A5\u5904
+block.cyber-io-smart-stream-client.name=Stream Client
+block.cyber-io-smart-stream-client.description=
+block.cyber-io-smart-stream-host.name=Stream Host
+block.cyber-io-smart-stream-host.description=
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
@@ -64,6 +68,8 @@ bar.cyber-io.receiver=\u63A5\u53D7\u7AEF: {0}
 bar.cyber-io.sender=\u53D1\u9001\u7AEF: {0}
 bar.cyber-io.ani-state-last=\u6700\u540E: {0}
 bar.cyber-io.null=Null
+bar.cyber-io.client=Client: {0}
+bar.cyber-io.host=Host: {0}
 #Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
