--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -37,6 +37,10 @@ block.cyber-io-smart-distributor.name=\u667A\u80FD\u914D\u9001\u5668
 block.cyber-io-smart-distributor.description=\u4E00\u9375\u9023\u63A5\uFF0C\u5206\u914D\u60A8\u7684\u7269\u54C1.
 block.cyber-io-smart-unloader.name=\u667A\u80FD\u88DD\u8F09\u5668
 block.cyber-io-smart-unloader.description=\u5F9E\u5468\u570D\u7684\u65B9\u584A\u4E2D\u5378\u8F09\u6240\u9700\u8981\u7684\u65B9\u584A\uFF0C\u9001\u81F3\u9023\u63A5\u9EDE
+block.cyber-io-smart-stream-client.name=Stream Client
+block.cyber-io-smart-stream-client.description=
+block.cyber-io-smart-stream-host.name=Stream Host
+block.cyber-io-smart-stream-host.description=
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
@@ -64,6 +68,8 @@ bar.cyber-io.receiver=\u63A5\u6536\u7AEF: {0}
 bar.cyber-io.sender=\u767C\u9001\u7AEF: {0}
 bar.cyber-io.ani-state-last=\u6700\u5F8C: {0}
 bar.cyber-io.null=Null
+bar.cyber-io.client=Client: {0}
+bar.cyber-io.host=Host: {0}
 #Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
