--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -43,6 +43,8 @@ block.cyber-io-stream-host.name=Stream Host
 block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
 block.cyber-io-stream-server.name=Stream Server
 block.cyber-io-stream-server.description=
+block.cyber-io-jammer.name=Jammer
+block.cyber-io-jammer.description=Jamming devices.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
