--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -43,6 +43,8 @@ block.cyber-io-stream-host.name=Stream Host
 block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
 block.cyber-io-stream-server.name=Stream Server
 block.cyber-io-stream-server.description=
+block.cyber-io-jammer.name=Jammer
+block.cyber-io-jammer.description=Jamming devices.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
