--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -83,3 +83,5 @@ status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6807\u4F1A\u6839\u636E\u8840\u91CF\u6765\u53D7\u5230\u4F24\u5BB3\u3002
 status.cyber-io-vulnerable.name=\u6613\u4F24
 status.cyber-io-vulnerable.description=\u5F53\u5FC3\uFF0C\u4ED6\u4EEC\u968F\u65F6\u90FD\u4F1A\u6B7B\uFF01
+status.cyber-io-static.name=Static
+status.cyber-io-static.description=Warning! Signal interference detected.
