--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -83,3 +83,5 @@ status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6A19\u6703\u6839\u64DA\u6700\u5927\u751F\u547D\u503C\u4F86\u53D7\u5230\u50B7\u5BB3.
 status.cyber-io-vulnerable.name=\u5BB9\u6613\u53D7\u50B7\u7684
 status.cyber-io-vulnerable.description=\u7576\u5FC3\u9EDE!\u4ED6\u5011\u96A8\u6642\u90FD\u6B7B\u6389\u7684\uFF01
+status.cyber-io-static.name=Static
+status.cyber-io-static.description=Warning! Signal interference detected.
