--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -31,20 +31,20 @@ block.cyber-io-TMTRAINER.name=TM\u8BAD\u7EC3\u5BB6
 block.cyber-io-TMTRAINER.description=TM\u8BAD\u7EC3\u5BB6
 block.cyber-io-prism.name=\u68F1\u955C
 block.cyber-io-prism.description=\u68F1\u955C\u53EF\u4EE5\u590D\u5236\u4F60\u7684\u5B50\u5F39\uFF0C\u56E0\u4E3A\u4ED6\u662F\u4E3A\u4E86\u60A8\u7684\u5B89\u5168.
-block.cyber-io-prism-obelisk.name=Obelisk
-block.cyber-io-prism-obelisk.description=It's watching you.
+block.cyber-io-prism-obelisk.name=\u65B9\u5C16\u7891
+block.cyber-io-prism-obelisk.description=\u5B83\u5728\u770B\u7740\u4F60.
 block.cyber-io-smart-distributor.name=\u667A\u80FD\u5206\u914D\u5668
 block.cyber-io-smart-distributor.description=\u4E00\u952E\u8FDE\u63A5\uFF0C\u5206\u914D\u60A8\u7684\u7269\u54C1.
 block.cyber-io-smart-unloader.name=\u667A\u80FD\u5378\u8F7D\u5668
 block.cyber-io-smart-unloader.description=\u4ECE\u5468\u56F4\u65B9\u5757\u4E2D\u5378\u8F7D\u51FA\u9700\u8981\u7684\u7269\u54C1\uFF0C\u9001\u81F3\u8FDE\u63A5\u5904
-block.cyber-io-stream-client.name=Stream Client
-block.cyber-io-stream-client.description=Clients can get the instant liquid but limited by the network speed.
-block.cyber-io-stream-host.name=Stream Host
-block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
-block.cyber-io-stream-server.name=Stream Server
-block.cyber-io-stream-server.description=
-block.cyber-io-jammer.name=Jammer
-block.cyber-io-jammer.description=Jamming devices.
+block.cyber-io-stream-client.name=\u6D41\u4F53\u5206\u914D\u5668
+block.cyber-io-stream-client.description=\u63A5\u6536\u7AEF\u53EF\u5373\u65F6\u83B7\u53D6\u6D41\u4F53\uFF0C\u4F46\u53D7\u9650\u4E8E\u7F51\u7EDC\u901F\u5EA6.
+block.cyber-io-stream-host.name=\u6D41\u4F53\u53D1\u9001\u7AEF
+block.cyber-io-stream-host.description=\u4E0A\u4F20\u6D41\u4F53\uFF0C\u53EF\u4EE5\u81EA\u7531\u9009\u62E9\u5206\u914D\u5230\u63A5\u6536\u7AEF\u6570\u91CF.
+block.cyber-io-stream-server.name=\u6D41\u4F53\u63A5\u6536\u7AEF
+block.cyber-io-stream-server.description=\u63A5\u53D7\u7F51\u7EDC\u53D1\u9001\u6765\u7684\u6D41\u4F53
+block.cyber-io-jammer.name=\u5E72\u6270\u5668
+block.cyber-io-jammer.description=\u5E72\u6270\u88C5\u7F6E.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
@@ -63,7 +63,7 @@ bar.cyber-io.rest-restore=\u5269\u4F59\u6062\u590D\uFF1A{0}
 bar.cyber-io.charge=\u5145\u80FD\uFF1A{0}\u79D2
 bar.cyber-io.is-asleep=\u4F11\u7720\u4E2D\uFF1A{0}
 bar.cyber-io.last-damaged=\u6700\u540E\u4F24\u5BB3\u65F6\u95F4\uFF1A{0}\u79D2
-bar.cyber-io.progress=\u6210\u957F: {0}%
+bar.cyber-io.progress=\u8FDB\u5EA6: {0}%
 bar.cyber-io.prism=\u68F1\u955C
 bar.cyber-io.prism.pl=\u5229\u7528\u68F1\u955C\u6563\u5C04\u5B50\u5F39
 bar.cyber-io.linked=\u5728\u94FE\u63A5\u7684
@@ -72,8 +72,8 @@ bar.cyber-io.receiver=\u63A5\u53D7\u7AEF: {0}
 bar.cyber-io.sender=\u53D1\u9001\u7AEF: {0}
 bar.cyber-io.ani-state-last=\u6700\u540E: {0}
 bar.cyber-io.null=Null
-bar.cyber-io.client=Client: {0}
-bar.cyber-io.host=Host: {0}
+bar.cyber-io.client=\u63A5\u53D7\u8005: {0}
+bar.cyber-io.host=\u53D1\u9001\u8005: {0}
 #Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
@@ -83,5 +83,5 @@ status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6807\u4F1A\u6839\u636E\u8840\u91CF\u6765\u53D7\u5230\u4F24\u5BB3\u3002
 status.cyber-io-vulnerable.name=\u6613\u4F24
 status.cyber-io-vulnerable.description=\u5F53\u5FC3\uFF0C\u4ED6\u4EEC\u968F\u65F6\u90FD\u4F1A\u6B7B\uFF01
-status.cyber-io-static.name=Static
-status.cyber-io-static.description=Warning! Signal interference detected.
+status.cyber-io-static.name=\u5E72\u6270
+status.cyber-io-static.description=\u8B66\u544A\uFF01\u6536\u5230\u4FE1\u53F7\u5E72\u6270\uFF01
