--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -37,14 +37,14 @@ block.cyber-io-smart-distributor.name=\u667A\u80FD\u914D\u9001\u5668
 block.cyber-io-smart-distributor.description=\u4E00\u9375\u9023\u63A5\uFF0C\u5206\u914D\u60A8\u7684\u7269\u54C1.
 block.cyber-io-smart-unloader.name=\u667A\u80FD\u88DD\u8F09\u5668
 block.cyber-io-smart-unloader.description=\u5F9E\u5468\u570D\u7684\u65B9\u584A\u4E2D\u5378\u8F09\u6240\u9700\u8981\u7684\u65B9\u584A\uFF0C\u9001\u81F3\u9023\u63A5\u9EDE
-block.cyber-io-stream-client.name=Stream Client
-block.cyber-io-stream-client.description=Clients can get the instant liquid but limited by the network speed.
-block.cyber-io-stream-host.name=Stream Host
-block.cyber-io-stream-host.description=Hosting your stream. Every client can get your broadcast if they like.
-block.cyber-io-stream-server.name=Stream Server
-block.cyber-io-stream-server.description=
-block.cyber-io-jammer.name=Jammer
-block.cyber-io-jammer.description=Jamming devices.
+block.cyber-io-stream-client.name=\u6D41\u9AD4\u5206\u914D\u5668
+block.cyber-io-stream-client.description=\u5206\u914D\u6D41\u9AD4\uFF0C\u53D7\u5230\u7DB2\u7D61\u901F\u5EA6\u9650\u5236.
+block.cyber-io-stream-host.name=\u6D41\u9AD4\u4E0A\u50B3\u5668
+block.cyber-io-stream-host.description=\u4E0A\u50B3\u6D41\u9AD4\uFF0C\u53EF\u4EE5\u9078\u64C7\u591A\u500B\u63A5\u53D7\u76EE\u6A19.
+block.cyber-io-stream-server.name=\u6D41\u9AD4\u63A5\u6536\u5668
+block.cyber-io-stream-server.description=\u63A5\u53D7\u7DB2\u7D61\u50B3\u8F38\u4F86\u7684\u6D41\u9AD4
+block.cyber-io-jammer.name=\u5E72\u64FE\u6A5F
+block.cyber-io-jammer.description=\u5E72\u64FE\u88DD\u7F6E.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
@@ -83,5 +83,5 @@ status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6A19\u6703\u6839\u64DA\u6700\u5927\u751F\u547D\u503C\u4F86\u53D7\u5230\u50B7\u5BB3.
 status.cyber-io-vulnerable.name=\u5BB9\u6613\u53D7\u50B7\u7684
 status.cyber-io-vulnerable.description=\u7576\u5FC3\u9EDE!\u4ED6\u5011\u96A8\u6642\u90FD\u6B7B\u6389\u7684\uFF01
-status.cyber-io-static.name=Static
-status.cyber-io-static.description=Warning! Signal interference detected.
+status.cyber-io-static.name=\u5E72\u64FE
+status.cyber-io-static.description=\u8B66\u544A\uFF01\u53D7\u5230\u4FE1\u865F\u5E72\u64FE\u653B\u64CA\uFF01
