More Holo Unit!

--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -45,9 +45,21 @@ block.cyber-io-stream-server.name=\u6D41\u9AD4\u4F3A\u670D\u5668
 block.cyber-io-stream-server.description=\u901A\u904E\u7DB2\u7D61\u5206\u4EAB\u5404\u7A2E\u4E32\u6D41\u5A92\u9AD4\uFF0C\u6211\u611B\u50CF\u7D20\u5DE5\u5EE0\uFF01
 block.cyber-io-jammer.name=\u5E72\u64FE\u6A5F
 block.cyber-io-jammer.description=\u5E72\u64FE\u5668\u3002\u8B66\u544A\uFF01\u624B\u6A5F\u82B1\u5C4F\u8ACB\u7ACB\u5373\u95DC\u6A5F\uFF01
+block.cyber-io-cyberion-mixer.name=Cyberion Mixer
+block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but it does work.
+block.cyber-io-holo-projector.name=Holo Projector
+block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u7A4D\u9AD4\u96FB\u8DEF
 item.cyber-io-ic.description=\u4E00\u584A\u6676\u7247\u3002
+# Liquids
+liquid.cyber-io-cyberion.name=Cyberion
+liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but no one knows how it does work.
+# Units
+unit.cyber-io-holo-miner.name=Holo Miner
+unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
+unit.cyber-io-holo-fighter.name=Holo Fighter
+unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
 #Bars
 bar.cyber-io.generation={0} \u4EE3
 bar.cyber-io.slow-down=\u904B\u8F49\u901F\u5EA6\uFF1A-{0}%
@@ -74,18 +86,20 @@ bar.cyber-io.ani-state-last=\u6700\u5F8C\u72C0\u614B\uFF1A{0}
 bar.cyber-io.null=\u7A7A
 bar.cyber-io.client=\u5BA2\u6236\u7AEF\uFF1A{0}
 bar.cyber-io.host=\u4E32\u6D41\u5668\uFF1A{0}
-#Controls
+# Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
 control.cyber-io.ok=OK
-#StatusEffects
+# StatusEffects
 status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6A19\u6703\u6839\u64DA\u6700\u5927\u751F\u547D\u503C\u4F86\u53D7\u5230\u50B7\u5BB3\u3002
 status.cyber-io-vulnerable.name=\u6613\u640D
 status.cyber-io-vulnerable.description=\u7576\u5FC3\u9EDE\uFF01\u4ED6\u5011\u96A8\u6642\u90FD\u6703\u6B7B\u6389\u7684\uFF01
 status.cyber-io-static.name=\u5E72\u64FE
 status.cyber-io-static.description=\u8B66\u544A\uFF01\u53D7\u5230\u4FE1\u865F\u5E72\u64FE\u653B\u64CA\uFF01
-#Welcome
+# Abilities
+Ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuating over time.
+# Welcome
 welcome.cyber-io.welcome=\u6B61\u8FCE\u904A\u73A9 Cyber IO {0}\u3002
 welcome.cyber-io.news=\u65B0\u805E\uFF1A{0}
 welcome.cyber-io.v2.title=\u50F1\u50AD\u4FE1
