--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -45,10 +45,22 @@ block.cyber-io-stream-server.name=\u6D41\u4F53\u670D\u52A1\u5668
 block.cyber-io-stream-server.description=\u4E00\u4E2A\u6D41\u4F53\u670D\u52A1\u5668\uFF0C\u627F\u8F7D\u7740\u60A8\u6E38\u73A9Mindustry\u7684\u4E50\u8DA3\u3002
 block.cyber-io-jammer.name=\u5E72\u6270\u5668
 block.cyber-io-jammer.description=\u5E72\u6270\u88C5\u7F6E\u3002\u8B66\u544A\uFF01\u5982\u6709\u82B1\u5C4F\uFF0C\u8BF7\u7ACB\u5373\u5173\u95ED\u624B\u673A\uFF01
+block.cyber-io-cyberion-mixer.name=Cyberion Mixer
+block.cyber-io-cyberion-mixer.description=In theory, it seems superfluous, but it does work.
+block.cyber-io-holo-projector.name=Holo Projector
+block.cyber-io-holo-projector.description=Projecting holographic units by Cyberion.
 # \u7269\u54C1
 item.cyber-io-ic.name=\u96C6\u6210\u7535\u8DEF
 item.cyber-io-ic.description=\u4E00\u5757\u82AF\u7247\u3002
-#Bars
+# \u6DB2\u4F53
+liquid.cyber-io-cyberion.name=Cyberion
+liquid.cyber-io-cyberion.description=An expensive liquid developed by Plum Star Inc., but no one knows how it does work.
+# \u5355\u4F4D
+unit.cyber-io-holo-miner.name=Holo Miner
+unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
+unit.cyber-io-holo-fighter.name=Holo Fighter
+unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
+# Bars
 bar.cyber-io.generation={0} \u4EE3
 bar.cyber-io.slow-down=\u901F\u5EA6\uFF1A-{0}%
 bar.cyber-io.efficiency-absorption=\u6548\u7387\u6C72\u53D6\uFF1A{0}%
@@ -74,18 +86,20 @@ bar.cyber-io.ani-state-last=\u6700\u540E\u72B6\u6001: {0}
 bar.cyber-io.null=\u65E0
 bar.cyber-io.client=\u5BA2\u6237\u7AEF: {0}
 bar.cyber-io.host=\u53D1\u9001\u7AEF: {0}
-#Controls
+# \u63A7\u4EF6
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
 control.cyber-io.ok=\u597D
-#StatusEffects
+# \u72B6\u6001\u6548\u679C
 status.cyber-io-infected.name=\u611F\u67D3
 status.cyber-io-infected.description=\u76EE\u6807\u4F1A\u6839\u636E\u8840\u91CF\u6765\u53D7\u5230\u4F24\u5BB3\u3002
 status.cyber-io-vulnerable.name=\u6613\u4F24
 status.cyber-io-vulnerable.description=\u5F53\u5FC3\uFF0C\u4ED6\u4EEC\u968F\u65F6\u90FD\u4F1A\u6B7B\uFF01
 status.cyber-io-static.name=\u5E72\u6270
 status.cyber-io-static.description=\u8B66\u544A\uFF01\u53D7\u5230\u4FE1\u53F7\u5E72\u6270\uFF01
-#Welcome
+# \u80FD\u529B
+Ability.cyber-io-holo=The holographic-projected units using Cyberion is attenuating over time.
+# \u6B22\u8FCE\u8BED
 welcome.cyber-io.welcome=\u6B22\u8FCE\u6E38\u73A9 Cyber IO {0}\u3002
 welcome.cyber-io.news=\u65B0\u95FB\uFF1A{0}
 welcome.cyber-io.v2.title=\u96C7\u4F63\u901A\u77E5
