--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -60,6 +60,12 @@ unit.cyber-io-holo-miner.name=Holo Miner
 unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
 unit.cyber-io-holo-fighter.name=Holo Fighter
 unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
+unit.cyber-io-holo-guardian.name=Holo Guardian
+unit.cyber-io-holo-guardian.description=A guardian projected by Holo Projector, but risk on its neck.
+unit.cyber-io-holo-architect.name=Holo Architect
+unit.cyber-io-holo-architect.description=A builder projected by Holo Projector, but it isn't built.
+unit.cyber-io-holo-supporter.name=Holo Supporter
+unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, but it can't save itself.
 #Bars
 bar.cyber-io.generation={0} \u4EE3
 bar.cyber-io.slow-down=\u904B\u8F49\u901F\u5EA6\uFF1A-{0}%
@@ -86,6 +92,8 @@ bar.cyber-io.ani-state-last=\u6700\u5F8C\u72C0\u614B\uFF1A{0}
 bar.cyber-io.null=\u7A7A
 bar.cyber-io.client=\u5BA2\u6236\u7AEF\uFF1A{0}
 bar.cyber-io.host=\u4E32\u6D41\u5668\uFF1A{0}
+bar.cyber-io.rest-life=Rest Life
+bar.cyber-io.rest-life.figure=Rest Life: {0}s
 # Controls
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
