--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -60,6 +60,12 @@ unit.cyber-io-holo-miner.name=Holo Miner
 unit.cyber-io-holo-miner.description=A short-lived worker bee projected by Holo Projector.
 unit.cyber-io-holo-fighter.name=Holo Fighter
 unit.cyber-io-holo-fighter.description=An ephemeral fighter projected by Holo Projector.
+unit.cyber-io-holo-guardian.name=Holo Guardian
+unit.cyber-io-holo-guardian.description=A guardian projected by Holo Projector, but risk on its neck.
+unit.cyber-io-holo-architect.name=Holo Architect
+unit.cyber-io-holo-architect.description=A builder projected by Holo Projector, but it isn't built.
+unit.cyber-io-holo-supporter.name=Holo Supporter
+unit.cyber-io-holo-supporter.description=A support projected by Holo Projector, but it can't save itself.
 # Bars
 bar.cyber-io.generation={0} \u4EE3
 bar.cyber-io.slow-down=\u901F\u5EA6\uFF1A-{0}%
@@ -86,6 +92,8 @@ bar.cyber-io.ani-state-last=\u6700\u540E\u72B6\u6001: {0}
 bar.cyber-io.null=\u65E0
 bar.cyber-io.client=\u5BA2\u6237\u7AEF: {0}
 bar.cyber-io.host=\u53D1\u9001\u7AEF: {0}
+bar.cyber-io.rest-life=\u5269\u4F59\u751F\u547D
+bar.cyber-io.rest-life.figure=\u5269\u4F59\u751F\u547D: {0}s
 # \u63A7\u4EF6
 control.cyber-io.yes=\u662F
 control.cyber-io.no=\u5426
