--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -113,3 +113,5 @@ welcome.cyber-io.news=\u65B0\u95FB\uFF1A{0}
 welcome.cyber-io.v2.title=\u96C7\u4F63\u901A\u77E5
 welcome.cyber-io.v2=\u6B22\u8FCE\u52A0\u5165\u6211\u4EEC Plum Star \u6709\u9650\u516C\u53F8\uFF0C\u8BF7\u4EAB\u53D7\u8FD9\u4E2A\u65B0\u7248\u672C\u6240\u6709\u7684\u8D5B\u535A\u79D1\u6280\uFF01\n\u4F46\u4F60\u53EF\u80FD\u4E0D\u5F97\u4E0D\u4E3A\u8FD9\u4E9B\u8FDE\u63A5\u8BBE\u5907\u7684\u7E41\u7410\u5DE5\u4F5C\u800C\u62C5\u5FC3\u3002\n\u4E0D\u7BA1\u600E\u6837\uFF0C\u795D\u4F60\u597D\u8FD0\uFF01
 welcome.cyber-io.v2.read=\u5165\u804C
+# \u8BBE\u7F6E
+setting.cyber-io-connection-opacity.name=\u8FDE\u63A5\u4E0D\u900F\u660E\u5EA6
