--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -113,3 +113,5 @@ welcome.cyber-io.news=\u65B0\u805E\uFF1A{0}
 welcome.cyber-io.v2.title=\u50F1\u50AD\u4FE1
 welcome.cyber-io.v2=\u6B61\u8FCE\u52A0\u5165\u6211\u5011Plum Star\u516C\u53F8, \u4EAB\u53D7\u60A8\u7684\u96FB\u73A9\u4E4B\u65C5\u5427\uFF01\n\u4F46\u662F\u60A8\u53EF\u80FD\u4E0D\u5F97\u4E0D\u64D4\u5FC3\u9023\u63A5\u9019\u4E9B\u8A2D\u5099\u7684\u7E41\u7463\u5DE5\u4F5C\u3002\n\u7E3D\u800C\u8A00\u4E4B\uFF0C\u795D\u4F60\u597D\u904B\uFF01
 welcome.cyber-io.v2.read=\u5165\u8077
+# \u8A2D\u7F6E
+setting.cyber-io-connection-opacity.name=\u9023\u63A5\u4E0D\u900F\u660E\u5EA6
